--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -85,7 +85,7 @@
 <pre><div class="parapos1">
 <p>Must explain to you how all this mistaken idea of denouncing pleasure<br>and praising pain was born will give you a complete account of the<br>system pain can procure him some great pleasure expound the actual<br>of the master-builder of human happiness.</p></div></pre>
 <pre><div class="parapos2">
-  <p>There anyone who loves or pursues or desires to obtain pain of itself,<br>because it pain but because occasionally circumstances occurs in<br>which toil and pain procures him some great pleasure take a trivial<br>example physical exercise.
+ <p>There anyone who loves or pursues or desires to obtain pain of itself,<br> because it pain but because occasionally circumstances occurs in<br> which toil and pain procures him some great pleasure take a trivial<br> example physical exercise.
     </p></div></pre>     
             <div class="circle"><p class="let">E</p></div>
             <div class="circle2"><p class="lets">G</p></div>
@@ -287,7 +287,7 @@ dots[slideIndex-1].className += " active";
   <div class="ppos7">
   <p>ple ''.</p></div>
   <div class="rd">
-    <a href="dummy1.html" style="text-decoration:none">
+    <a href="seemorewho.html" style="text-decoration:none">
     <div class="ppos8">
     <p>See</p></div>
     <div class="ppos9">
