--- a/buildinginformationmodelling.html
+++ b/buildinginformationmodelling.html
@@ -76,17 +76,43 @@
     </div>
     </div>
     <div class="container1">
-        <div class="image9">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture57.PNG" width="1902.5px" height="806.6px"></div>
             <div class="hpost2"><h1>BUILDING INFORMATION MODELLING</h1></div>
-           <div class="parapost1">
+           <pre><div class="parapost1">
             <p>BIM is a process of generating and managing building data during its complete Life cycle, from conceptual design  through operation of<br> the building.    It is an integrated Work flow that enables architects, engineers, and builders to explore a project digitally before it is built.</p>
             BIM is a modern technology and associated set of  processes to produce, communicate, and analyze 'building<br> models'. Digital representations of the building components that follow parametric rules, which can be<br> manipulated in an intelligent Fashion.<br>
-            Carry 'computable graphic and non-redundant data attributes' which are consistent, coordinated which can be<br> viewed</p></div>
-            <div class="smallrec4" style="padding-left:36vw;margin-top:-20vh">
-              <div id="rectangle1" style="width:11vw;height:4vh;border-style:solid;border-width:0.2vw;background-color:gray">
-              </div></div>
-            
+            Carry 'computable graphic and non-redundant data attributes' which are consistent, coordinated which can be<br> viewed</p></div></pre>
+            <div class="rec1">
+              <div class="img-1">
+              <img src="Picture75.png" width="190px" height="150px"></div>
+              <div class="hd-1">
+                <h1>CAPTURE</h1>
+              </div>
+              <div class="img-2">
+                <img src="Picture76.png" width="80px" height="60px"></div>
+                <div class="img-3">
+                  <img src="Picture77.png" width="130px" height="90px"></div>
+                  <div class="hd-2">
+                    <h1>PROCESS</h1>
+                  </div>
+                  <div class="img-4">
+                    <img src="Picture76.png" width="80px" height="60px"></div>
+                    <div class="img-5">
+                      <img src="Picture78.png" width="130px" height="90px"></div>
+                      <div class="hd-3">
+                        <h1>MODELLING</h1>
+                      </div>
+                      <div class="img-6">
+                        <img src="Picture76.png" width="80px" height="60px"></div>
+                        <div class="img-7">
+                          <img src="Picture79.png" width="130px" height="90px"></div>
+                          <div class="hd-4">
+                            <h1>QUALITY CONTROL</h1>
+                          </div>
+            </div>
+            <div class="square1"></div>
+            <div class="square2"></div>
+            <div class="square3"></div>
+            <div class="square4"></div>
         </div>
     <div class="container9">
       <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
