--- a/digitalfacilitysolutions.html
+++ b/digitalfacilitysolutions.html
@@ -101,6 +101,17 @@ For example, collisions due to insufficient headroom are often only discovered<b
  <pre><div class="parapos6">
 <p>Scanning for digitalization plays a crucial role in the overall digital transformation of manufacturing<br> processes by capturing accurate physical data and converting it into digital formats.
 </p></div></pre>
+<div class="pic70">
+<img src="Picture70.png" width="1500px" height="350px"></div>
+<pre><div class="head1">
+  <h1>Point Cloud Data</h1>
+</div></pre>
+<pre><div class="head2">
+  <h1>3D Modelling</h1>
+</div></pre>
+<pre><div class="head3">
+  <h1>Data Rich BIM Model</h1>
+</div></pre>
 <pre><div class="parapos7">
   <p>This digital data can then be leveraged for advanced analysis, simulation, and optimization, leading to improved<br> productivity, quality, and agility in the manufacturing industry.<br>
  Digital facility solutions use data analytics techniques to analyse collected data and extract actionable insights from it.<br> Machine learning models and advanced analytics algorithms can identify patterns, detect anomalies, and predict<br> maintenance needs. Equipment uptime can be optimized, unplanned downtime can be reduced, and mechanical<br> systems can be extended for a longer period of time with predictive maintenance
@@ -113,6 +124,48 @@ For example, collisions due to insufficient headroom are often only discovered<b
    <br> Digital facility solutions provide remote monitoring and control of mechanical systems within a facility. Facility managers<br> can access real-time data, monitor performance, and control equipment remotely through centralized dashboards or<br> mobile applications. By doing so, proactive decisions can be made, issues can be quickly resolved, and troubleshooting can<br> be done remotely. Asset and Inventory Management: Digital facility solutions help you manage assets and inventory. They<br> can track equipment usage, monitor maintenance schedules, and manage spare parts and inventory levels. As a result,<br> operations are streamlined, asset utilization is improved, and equipment failures are reduced.<br>
    <br> Digital facility solutions include tools for optimizing facilities and managing spaces. Insights into space utilization, occupant<br> behaviour, and facility workflows can be gained from these tools. By using this information, facility managers can optimize<br> space allocation, boost workplace efficiency, and plan for future expansion. To provide a holistic view of facility operations,<br> digital facility solutions integrate with existing building management systems (BMS). HVAC, lighting, access control, and<br> security systems can all be controlled, monitored, and reported by this integration.
     </p></div>
+</div>
+<div class="container5">
+  <pre><div class="head-2">
+  <h1>3D Facility - Scan To 3D Factory
+  </h1></div></pre>
+  <pre><div class="h-6">
+    <h6>3D Factory services assists clients for both new facility setup (Greenfield) and refurbishing existing facilities (Brownfield). Digitization opens up<br> the organization to leverage the 3D model in multiple applications and be future ready.
+    </h6>
+  </div></pre>
+  <div class="h-2">
+  <h2>Details Included in the Model:</h2>
+</div>
+
+<pre><div class="p-pos1">
+<p>
+  <span style='font-size:30px;'>&#9670;</span> Architectural structures such as mezzanine floor, platforms, support beams etc.
+  <span style='font-size:30px;'>&#9670;</span> Detailed MEPF models created referring both scan data and 2D layouts
+  <span style='font-size:30px;'>&#9670;</span> Structural BIM modeling with columns, floors, roof etc.
+  <span style='font-size:30px;'>&#9670;</span> Workstations, Market space, Warehouse, Kitting  areas, QC rooms etc. included<br>       matching the scan data.
+  <span style='font-size:30px;'>&#9670;</span> Material storage racks, Dunnage's and material movement Trolleys added
+  <span style='font-size:30px;'>&#9670;</span> Office rooms, sit out areas inside the facility included
+  <span style='font-size:30px;'>&#9670;</span> Overhead structures, roof
+</p></div></pre>
+<div class="pic74">
+<img src="Picture74.png" width="700px" height="700px"></div>
+
+<div class="h-3">
+  <h2>Applications:
+  </h2>
+</div>
+<pre><div class="p-pos2">
+  <p>
+    <span style='font-size:30px;'>&#9670;</span> Virtual Facility Walkthrough
+    <span style='font-size:30px;'>&#9670;</span> New Product clash test
+    <span style='font-size:30px;'>&#9670;</span> New Facility vs Existing Facilities clash test
+    <span style='font-size:30px;'>&#9670;</span> Layout Proposal Studies
+    <span style='font-size:30px;'>&#9670;</span> Product & Process feasibility study with Facility
+    <span style='font-size:30px;'>&#9670;</span> Installation & decommissioning studies 
+    <span style='font-size:30px;'>&#9670;</span> Material cost estimation
+    <span style='font-size:30px;'>&#9670;</span> Coupled with AR/VR support digital training
+    <span style='font-size:30px;'>&#9670;</span> IOT connectivity and MES integration opportunity
+  </p></div></pre>
 </div>
     <div class="container9" style="margin-top:113px">
       <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
