--- a/What We Do.html
+++ b/What We Do.html
@@ -136,7 +136,7 @@ About Our Company
   <div class="container3">
     <div class="hpos10" style="font-size:1.3vw;padding-top:0.8vh;font-family: 'Times New Roman', Times, serif;text-align:center">
       <h1>Road Map</h1></div>
-      <pre><div style="margin-top:-4vh;text-align:center;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
+      <pre><div style="margin-top:-4vh;text-align:center;font-size:1.1vw;font-family: 'Times New Roman', Times, serif;color:gray">
         <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
     <div class="para">
       <div class="treeimg">
@@ -147,9 +147,9 @@ About Our Company
   <p>Our History/Journey</p>
 
   </div>
-  <pre><div class="paragraph3">
+  <!-- <pre><div class="paragraph3">
     <p>11+ Years - A Story of Transformation</p>
-  </div></pre>
+  </div></pre> -->
   </div>
   <div class="container4">
    
