--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -145,13 +145,13 @@
 
 
         </div>
-        <div class="me" style="margin-top:-271.8px;margin-left:800px;font-size:36px">
+        <div class="me1" style="margin-top:-271.8px;margin-left:800px;font-size:36px">
             <p>Global Experience</p>
           </div>
-        <div class="co" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
+        <div class="co1" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
          <p>Value For Results </p>
        </div>
-       <div class="int" style="margin-top:-41px;margin-left:1700px;font-size:36px">
+       <div class="int1" style="margin-top:-41px;margin-left:1700px;font-size:36px">
         <p>High-Quality Results</p>
       </div>
 
@@ -170,7 +170,7 @@
           <div class="img3">
           <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\mains.png" style="width:108.5vw;height: 81vh">
           <div class="img5">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture23.png" style="width:15.5vw;height:15vh"></div>
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Eg-Website\Picture23.png" style="width:11.5vw;height:15vh"></div>
           <div class="text2">Our vertical solutions equip with the tools need for Industry<br> to streamline processes, boost productivity, and thrive in a<br> digital landscape that unlock real value, making our business<br> more innovative and efficient than ever before.
 
 
@@ -304,7 +304,7 @@ dots[slideIndex-1].className += " active";
 <pre><div class="para-5"><p>when you  </p> </div></pre>
 <div class="para-6"><b>succeed.</b> </div>
 <div class="rd1">
-  <a href="dummy1.html" style="text-decoration:none">
+  <a href="seemorecherish.html" style="text-decoration:none">
   <div class="ppos10">
   <p>See</p></div>
   <div class="ppos11">
