--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
     <br>
     <br>
     <div class="container4" style="display:flex;width:99.1vw">
-    <div class="ppos2" style="margin-top:4vh;margin-left:1.3vw;font-size:1.2vw">
+    <div class="ppos2" style="margin-top:4vh;margin-left:1.3vw;font-size:1.2vw;color:gray">
     <p>About Company</p></div>
     <div class="hpos4" style="margin-top:8vh;margin-left:-8.8vw;font-size:1.6vw;line-height:8vh">
 <h1>Mission is to bring the<br> power of Industrial<br> Automation to every<br> Business
@@ -138,7 +138,7 @@
 <div class="container5" style="display:flex;width:99.1vw">
     <pre><div class="ppos4" style="margin-left:41vw;font-size:3vw;margin-top:-13.8vh;font-family: 'Times New Roman', Times, serif;">
 <p>What We Serve</p></div></pre>
-<pre><div style="margin-left:-25vw;margin-top:3vh;font-size:1.1vw;font-family: 'Times New Roman', Times, serif;">
+<pre><div style="margin-left:-25vw;margin-top:3vh;font-size:1.1vw;font-family: 'Times New Roman', Times, serif;color:gray">
 <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
             
 <div class="rec1" style="margin-left:-65.9vw;margin-top:13vh">
@@ -205,7 +205,7 @@
 <div class="container6" style="display:flex">
     <pre><div class="hpos5" style="margin-left:41vw;font-size:3vw;margin-top:-21.2vh;font-family: 'Times New Roman', Times, serif">
     <p>What We Do <p></div></pre>
-       <pre><div style="margin-left:-25vw;margin-top:-0.1vh;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
+       <pre><div style="margin-left:-25vw;margin-top:-0.1vh;font-size:1.1vw;font-family: 'Times New Roman', Times, serif;color:gray">
        <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
 
     <div class="square1" style="margin-left:-63.4vw;margin-top:13vh">
@@ -246,7 +246,7 @@
 <div class="container7" style="display:flex">
     <pre><div class="hpos9" style="margin-left:41vw;font-size:1.3vw;margin-top:-7.5vh;font-family: 'Times New Roman', Times, serif">
 <h1>Belief On Us</h1></div></pre>
-<pre><div style="margin-top:2.3vh;margin-left:-20vw;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
+<pre><div style="margin-top:2.3vh;margin-left:-20vw;font-size:1.1vw;font-family: 'Times New Roman', Times, serif;color:gray">
 <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
 <a href="dummy1.html"><img src="picture9.png" width="603vw" height="307vh" style="margin-left:-66.1vw;margin-top:13vh"></a>
 <pre><div style="margin-top:7vh;margin-left:-65vw;color:white;font-size:1.7vw;font-family:'Times New Roman', Times, serif">
@@ -283,7 +283,7 @@
 <div class="container8" style="display:flex">
     <div style="margin-left:41vw;font-size:1.3vw;margin-top:-1.6vw">
     <h1>We Are Growing</h1></div>
-    <div style="margin-left:-25vw;margin-top:6vh;font-size:1.1vw">
+    <div style="margin-left:-25vw;margin-top:6vh;font-size:1.1vw;color:gray">
     <p>Our numbers speak for themselves. We are a step ahead in every segment
     </p></div>
     <div class="rec1" style="margin-left:-65.7vw;margin-top:13vh">
