--- a/seemorewho.html
+++ b/seemorewho.html
@@ -93,7 +93,28 @@
           </div>
 
 <div class="container1">
-    <div class="rec1"></div>
+    <div class="rec1">
+      <div class="img_1">
+        <img src="Picture86.jpg" width="450px" height="450px">
+      </div>
+      <div class="h-1"><h1>C Subba Reddy</h1></div>
+      <div class="p-1"><p>Founder</p></div>
+    </div>
+    <div class="rec2">
+      <div class="img_2">
+        <img src="Picture87.png" width="450px" height="450px">
+      </div>
+      <div class="h-2"><h1>C Chaitanya</h1></div>
+      <div class="p-2"><p>Head Of Finance</p></div>
+    </div>
+    <div class="rec3">
+      <div class="img_3">
+        <img src="Picture88.png" width="450px" height="450px">
+      </div>
+      <div class="h-3"><h1>C Chandrasekhar  Reddy</h1></div>
+      <div class="p-3"><p>Director</p></div>
+    </div>
+
 </div>
 
 
