--- a/digitalfacilitysolutions.html
+++ b/digitalfacilitysolutions.html
@@ -167,36 +167,36 @@ For example, collisions due to insufficient headroom are often only discovered<b
     <span style='font-size:30px;'>&#9670;</span> IOT connectivity and MES integration opportunity
   </p></div></pre>
 </div>
-    <div class="container9" style="margin-top:113px">
-      <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
-          <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
-          <div style="margin-top:-24vh;margin-left:3.85vw;font-size:5vw;color:white;margin-top:-13.2vh"><p>E</p></div>
+<div class="container9">
+  <div class="Circle1">
+      <div id="circle"></div></div>
+      <div class="letE"><p>E</p></div>
 
-          <div class="Circle2" style="margin-left:1.64vw;margin-top:19.6vh">
-              <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
-              <div style="margin-top:-24vh;margin-left:3vw;font-size:5vw;color:white;margin-top:-13.4vh"><p>G</p></div>
+      <div class="Circle2">
+          <div id="circle"></div></div>
+          <div class="letG"><p>G</p></div>
 
-              <div style="margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh">
-      <p class="para1">Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
-      </p></div>
-      <div style="margin-left:39.35vw;margin-top:-43.8vh;font-size:0.7vw">
-      <h1>Main Links</h1></div>
-      <div style="margin-left:55.5vw;margin-top:-3.3vh;font-size:0.7vw">
-      <h1>Services</h1></div>
-      <div style="margin-left:79.3vw;margin-top:-3.5vh;font-size:0.7vw;color:white">
-          <h1>Contact Us</h1></div>
+          <div class="para1">
+  <p>Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
+  </p></div>
+  <div class="hpost6">
+  <h1>Main Links</h1></div>
+  <div class="hpost7">
+  <h1>Services</h1></div>
+  <div class="hpost8">
+      <h1>Contact Us</h1></div>
 
-<pre><div style="font-weight:bold;margin-left:39.5vw;margin-top:0.1vh;font-size:1vw;line-height:2vh">
-<p><div><a href="#" style="text-decoration:none;color:black">Home</a></div>
-<div><a href="#" style="text-decoration:none;color:black">What We Do</a></div>
-<div><a href="#" style="text-decoration:none;color:black">Who We Are</a></div>
-<div><a href="#" style="text-decoration:none;color:black">Services</a></div>
-<div><a href="#" style="text-decoration:none;color:black">Insights</a></div>
+<pre><div class="links">
+<p><div><a href="home.html" style="text-decoration:none;color:black">Home</a></div>
+<div><a href="What We Do.html" style="text-decoration:none;color:black">What We Do</a></div>
+<div><a href="WhoWeAre.html" style="text-decoration:none;color:black">Who We Are</a></div>
+<div><a href="services1.html" style="text-decoration:none;color:black">Services</a></div>
+<div><a href="insights.html" style="text-decoration:none;color:black">Insights</a></div>
 <div><a href="#" style="text-decoration:none;color:black">Get In Touch</a></div>
 <div><a href="#" style="text-decoration:none;color:black">Careers</a></div>
 <div><a href="#" style="text-decoration:none;color:black">News & Events</a></div>
 </p></div></pre>
-<pre><div style="font-weight:bold;margin-left:55.5vw;margin-top:-34.1vh;font-size:1vw;line-height:2vh">
+<pre><div class="para3">
 <p>Engineering Design Solutions
 
 Industrial Automation Solutions
@@ -214,88 +214,88 @@ Contract To Contract
 Contract to Hire
 
 </p></div></pre>
-<pre><div style="font-weight:bold;margin-left:79.5vw;margin-top:-34.2vh;font-size:1vw;color:white;line-height:2vh"><p>
+<pre><div class="info"><p>
 Mobile: +91 9640 173 246
 
 Email: info@envisionis-group.com
 </p></div></pre>
-<div style="margin-left:10.45vw;margin-top:35.5vh;font-size:0.7vw">
-  <h1>Locations:-</h1></div>
-  <div style="margin-left:10.5vw;margin-top:1.4vh;font-size:0.6vw">
-  <h1>Envision Group - Telangana, Hyderabad</h1></div>
-  <div style="margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw">
-  <h1>Envision Group - Pune, Maharashtra</h1></div>
-  <div style="margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw">
-  <h1>Envision Group - Bangalore, Karnataka</h1></div>
+<div class="hpost5">
+<h1>Locations:-</h1></div>
+<div class="Hpos">
+<h1>Envision Group - Telangana, Hyderabad</h1></div>
+<div class="Mpos">
+<h1>Envision Group - Pune, Maharashtra</h1></div>
+<div class="Kpos">
+<h1>Envision Group - Bangalore, Karnataka</h1></div>
 
 
-  <div style="margin-left:10.5vw;margin-top:1.5vh;font-size:1vw"><p>#913, Manjeera Trinity Corporate,<br> 
+<div class="HA"><p>#913, Manjeera Trinity Corporate,<br> 
 9th floor, Office No.913,<br> 
-KPHB, Hyderabad, India - 500085</p></div>
-<div style="margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw">
+KPHB, India - 500085</p></div>
+<div class="MA">
 <p>Suratwala Mark, Wakad Road,<br>
 8th floor, Office No.810,<br> 
-Opposite to KFC, Pune, India - 411057</p></div>
-<div style="margin-left:67.7vw;margin-top:-7.3vh;font-size:1vw">
-<p>#24, Gr. Piston, 2nd floor, Office No.201,<br> 
-Banashankari 3rd Stage,<br> 
-Bangalore, India - 560085</p></div>
-<div style="margin-left:10.5vw;margin-top:2vh;font-size:0.6vw">
+Opposite to KFC, India - 411057</p></div>
+<div class="KA">
+<p>1596, 20th Main Rd, Agara Village,<br> 
+1st Sector,HSR Layout,<br> 
+India - 560085</p></div>
+<div class="Tpos">
 <h1>Envision Group - Tamil Nadu, Chennai</h1></div>
-<div style="margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw">
+<div class="Gpos">
 <h1>Envision GmbH - Germany, Europe</h1></div>
-<div style="margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw">
+<div class="Rpos">
 <h1>Envision SRL - Romania, Europe</h1></div>
-<div style="margin-left:10.5vw;margin-top:1.3vh;font-size:1vw">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br>
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx</p></div>
-<div style="margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw">
+<div class="TA">
+<p>13, Customs colony,<br>
+OMR, Oggiyamduraipakkam,<br>
+India - 600097</p></div>
+<div class="GA">
 <p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
 xth floor, Office No.xxx,<br>
 xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
 </p></div>
-<div style="margin-left:67.7vw;margin-top:-7.2vh;font-size:1vw">
+<div class="RA">
 <p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
 xth floor, Office No.xxx,<br> 
 xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
 </p></div>
 
 
-  </div>
-
-
- 
+</div>
 
 
 
 
 
-  <div class="footer">
-    <div class="fc">
-        <h1>&copy;</h1>
-      </div>
-    <p class="fp">2024 Envision Group. All Rights Reserved
-  </p>  
-  <div class="eimg">
-    <img src="EIS-logo.png" width="100%" height="85%">
+
+
+
+<div class="footer">
+<div class="fc">
+    <h1>&copy;</h1>
   </div>
-  <div class="lin">
-    <img src="linkdin.png">
-   
-  </div>
-  <div class="face">
-    <img src="facebook.png">
-  </div>
-  <div class="inst">
-    <img src="instagram.png" width="6.8%">
-  </div>
-  <div class="gm">
-    <img src="googles.png" width="70%">
-  </div>
-  <div class="uu">
-    <img src="youtube.png" width="78%" height="70%">
-  </div>
-  </div>
-  
+<p class="fp">2024 Envision Group. All Rights Reserved
+</p>  
+<div class="eimg">
+<img src="EIS-logo.png" width="100%" height="85%">
+</div>
+<div class="lin">
+<a href="https://in.linkedin.com/" target="_blank"><img src="linkdin.png"></a>
+
+</div>
+<div class="face">
+<a href="https://www.facebook.com/" target="_blank"> <img src="facebook.png"></a>
+</div>
+<div class="inst">
+<a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="instagram.png" width="6.8%"></a>
+</div>
+<div class="gm">
+<a href="https://google.com/" target="_blank"><img src="googles.png" width="70%"></a>
+</div>
+<div class="uu">
+<a href="https://youtube.com/@EnvisionISGroup?si=0QoWVzg9Ng8Tlysz" target="_blank"><img src="youtube.png" width="78%" height="70%"></a>
+</div>
+</div>
+
 </body>
