--- a/seemorecherish.html
+++ b/seemorecherish.html
@@ -81,11 +81,12 @@
     </div>
     <div class="container">
 
-<pre><div class="hpos1"><h1>Who We Are?</h1></div></pre>
+<pre><div class="hpos1"><h1>Let's take a tour to the cherish 
+</h1></div></pre>
 <pre><div class="parapos1">
 <p>Must explain to you how all this mistaken idea of denouncing pleasure<br>and praising pain was born will give you a complete account of the<br>system pain can procure him some great pleasure expound the actual<br>of the master-builder of human happiness.</p></div></pre>
 <pre><div class="parapos2">
- <p>There anyone who loves or pursues or desires to obtain pain of itself,<br> because it pain but because occasionally circumstances occurs in<br> which toil and pain procures him some great pleasure take a trivial<br> example physical exercise.
+<p>There anyone who loves or pursues or desires to obtain pain of itself,<br>because it pain but because occasionally circumstances occurs in<br>which toil and pain procures him some great pleasure take a trivial<br>example physical exercise.
     </p></div></pre>     
             <div class="circle"><p class="let">E</p></div>
             <div class="circle2"><p class="lets">G</p></div>
