--- a/insightsfourth.html
+++ b/insightsfourth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Services</title>
-    <link rel="stylesheet" href="insights.css">
+    <link rel="stylesheet" href="insightsfourth.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
@@ -79,44 +79,35 @@
         </div>
     </div>
     </div>
-    <div class="container">
-
-<pre><div class="hpos1"><h1>Stay in the know 
-</h1></div></pre>
-<pre><div class="parapos1">
-<p>We believe the exchange of knowledge fuels collective growth</p></div></pre>     
-            <div class="circle"><p class="let">E</p></div>
-            <div class="circle2"><p class="lets">G</p></div>
-          </div>
           <div class="container1">
             <div class="h-1"><h1>Get The Latest</h1></div>
-            <div class="bar"></div>
             <div class="num1">
-              <a href="insights.html" style="text-decoration:none;color:lightgreen;"><p>01</p></a>
+                <a href="insights.html" style="text-decoration:none;color:white"><p>01</p></a>
             </div>
             <div class="p-1">
-             <a href="insights.html" style="text-decoration:none;color:black"><p>Neural Network Evolution</p></a>
+             <a href="insights.html" style="text-decoration:none;color:white"><p>Neural Network Evolution</p></a>
             </div>
             <div class="im1">
-              <img src="Picture91.jpg" width="1050px" height="400px">
+              <img src="Picture95.PNG" width="1050px" height="400px">
             </div>
             <div class="num2">
-              <a href="insightsneural.html" style="text-decoration:none;color:white"><p>02</p></a>
+                <a href="insightsneural.html" style="text-decoration:none;color:white"><p>02</p></a>
             </div>
             <div class="p-2">
               <a href="insightsneural.html" style="text-decoration:none;color:white"><p>Next Project Name</p></a>
              </div>
              <div class="num3">
-              <a href="insightsthird.html" style="text-decoration:none;color:white"><p>03</p></a>
+                <a href="insightsthird.html" style="text-decoration:none;color:white"><p>03</p></a>
             </div>
             <div class="p-3">
               <a href="insightsthird.html" style="text-decoration:none;color:white"><p>Next Project Name</p></a>
              </div>
+             <div class="bar"></div>
              <div class="num4">
-              <a href="insightsfourth.html" style="text-decoration:none;color:white"><p>04</p></a>
+                <a href="insightsfourth.html" style="text-decoration:none;color:lightgreen"><p>04</p></a>
             </div>
             <div class="p-4">
-              <a href="insightsfourth.html" style="text-decoration:none;color:white"><p>Next Project Name</p></a>
+              <a href="insightsfourth.html" style="text-decoration:none;color:black"><p>Next Project Name</p></a>
              </div>
              <div class="h-2">
               <h1>Spiking Neural Network: The building block for innovation</h1>
