--- a/readmore.html
+++ b/readmore.html
@@ -109,41 +109,38 @@
    
     <div class="vl"></div>
     <div class="image5">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture46.PNG" width="335px" height="180px"></div>
+      <a href="engineeringdesignsolutions.html"><img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture46.PNG" width="335px" height="180px"></a></div>
     <div class="image6">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture47.PNG" width="335px" height="180px"></div>
+      <a href="IndustrialAutomationSolutions.html"><img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture47.PNG" width="335px" height="180px"></a></div>
       <div class="hline">
         <hr width="1903px"></div>
       <div class="image7">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture48.PNG" width="335px" height="180px"></div>
+        <a href="digitalfacilitysolutions.html"><img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture48.PNG" width="335px" height="180px"></a></div>
         <div class="image8">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture49.PNG" width="335px" height="180px"></div>
-          <pre><div class="apos1"><a href="engineeringdesignsolutions.html" style="text-decoration:none;color:white"><b>1. ENGINEERING 
-   DESIGN 
-   SOLUTIONS
-            </b></a></div></pre>
+          <a href="buildinginformationmodelling.html"><img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture49.PNG" width="335px" height="180px"></a></div>
+          
+          <div class="num1"><a href="engineeringdesignsolutions.html" style="text-decoration:none;color:white"><p>1.</p></a></div>
+          <div class="apos1"><a href="engineeringdesignsolutions.html" style="text-decoration:none;color:white"><b>ENGINEERING DESIGN SOLUTIONS
+            </b></a></div>
             <div class="hline1">
               <hr width="300px"></div>
               <div class="oval1"><div class="sym1">&gt;</div></div>
-            <pre><div class="apos2"><a href="IndustrialAutomationSolutions.html" style="text-decoration:none;color:white"><b>2. INDUSTRIAL 
-   AUTOMATION 
-   SOLUTIONS
-</b></a></div></pre>
+              <div class="num2"><a href="IndustrialAutomationSolutions.html" style="text-decoration:none;color:white"><p>2.</p></a></div>
+            <div class="apos2"><a href="IndustrialAutomationSolutions.html" style="text-decoration:none;color:white"><b>INDUSTRIAL AUTOMATION SOLUTIONS
+</b></a></div>
 <div class="hline2">
   <hr width="300px"></div>
   <div class="oval2"><div class="sym2">&lt;</div></div>
-<pre><div class="apos3"><a href="digitalfacilitysolutions.html" style="text-decoration:none;color:white"><b>3. DIGITAL 
-   FACILITY
-   SOLUTIONS
-</b></a></div></pre> 
+  <div class="num3"><a href="digitalfacilitysolutions.html" style="text-decoration:none;color:white"><p>3.</p></a></div>
+<div class="apos3"><a href="digitalfacilitysolutions.html" style="text-decoration:none;color:white"><b>DIGITAL FACILITY SOLUTIONS
+</b></a></div>
 <div class="hline3">
   <hr width="300px"></div>
   <div class="oval3"><div class="sym3">&gt;</div></div>  
-<pre><div class="apos4"><a href="buildinginformationmodelling.html" style="text-decoration:none;color:white"><b>4. BUILDING 
-   INFORMATION 
-   MODELLING
+  <div class="num4"><a href="buildinginformationmodelling.html" style="text-decoration:none;color:white"><p>4.</p></a></div>
+<div class="apos4"><a href="buildinginformationmodelling.html" style="text-decoration:none;color:white"><b>BUILDING INFORMATION MODELLING
 
-</b></a></div></pre> 
+</b></a></div> 
 <div class="hline4">
   <hr width="300px"></div>
   <div class="oval4"><div class="sym4">&lt;</div></div> 
