--- a/services1.html
+++ b/services1.html
@@ -105,10 +105,10 @@
         <div class="mySlides fade1">
           <div class="numbertext">1 / 3</div>
           <div class="img1">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture31.PNG" style="width:100%;height: 88vh;z-index: 1;display: flex;">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture31.PNG" style="width:100vw;height: 75vh;z-index: 1;display: flex;">
           <div class="text1">Envision IS delivers Mechanical engineering services across<br> industry verticals in the major areas like Create, Validate, Build<br> and Support by provides domain specific expertise to its clients.<br> With its state-of-the-art infrastructure and latest engineering<br> tools have the experience to provide future focused innovations<br> in the mechanical engineering domain and also the cost<br> effective solutions offered by the company make it a one-stop<br> solutions provider in the Mechanical Engineering Domain.<br> Envision Integrated Services understands the complexities of<br> manufacturing and provides Manufacturing Engineering<br> Solutions that enable companies.
         </div>
-        <div class="me">
+        <div class="me1">
             <p>Mechanical Services</p>
           </div>
         <div class="co">
@@ -123,7 +123,7 @@
           </div>
           <div class="rd">
             <div class="a-pos1">
-            <a href="readmore.html" style="text-decoration:none"><p>Read More<i class='fas fa-book-open'></i>
+            <a href="readmore.html" style="text-decoration:none"><p>Read More<div class="openbook">&#128214;</div>
             </p></a></div>
           </div>
     </div>
@@ -132,7 +132,7 @@
         <div class="mySlides fade2">
           <div class="numbertext">2 / 3</div>
           <div class="img2">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture31.PNG" style="width:100%;height:90vh ;">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture31.PNG" style="width:100vw;height:75vh ;">
           <div class="text2">Our services are highly regarded by our clients. We provide the<br> best quality services to organizations. We are able to serve our<br> clients efficiently by maintained manpower requisition details<br> and also keep track of all recruitment activities. We highly<br> believe in client satisfaction and to ensure that we strive to<br> provide consistent and improved performance. We ensure<br> complete customer satisfaction by effectively using people,<br> process and technology. solutions provider in the Mechanical<br> Engineering Domain. Envision Integrated Services understands<br> the complexities of manufacturing and provides Manufacturing<br> Engineering Solutions that enable companies.
 
         </div>
@@ -149,9 +149,9 @@
           <div class="meimge2">
             <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture29.PNG">
           </div>
-          <div class="rd">
+          <div class="rd2">
             <div class="a-pos2">
-            <a href="#" style="text-decoration:none"><p>Read More<i class='fas fa-book-open'></i>
+            <a href="#" style="text-decoration:none"><p>Read More<div class="openbook2">&#128214;</div>
             </p></a></div>
           </div>
         </div>
@@ -160,7 +160,7 @@
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
           <div class="img3">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture31.PNG" style="width:100%;height: 90vh;">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture31.PNG" style="width:100vw;height:75vh;">
           <div class="text3">Our services are highly regarded by our clients. We provide the<br> best quality services to organizations. We are able to serve our<br> clients efficiently by maintained manpower requisition details<br> and also keep track of all recruitment activities. We highly<br> believe in client satisfaction and to ensure that we strive to<br> provide consistent and improved performance. We ensure<br> complete customer satisfaction by effectively using people,<br> process and technology. solutions provider in the Mechanical<br> Engineering Domain. Envision Integrated Services understands<br> the complexities of manufacturing and provides Manufacturing<br> Engineering Solutions that enable companies.
 
         </div>
@@ -177,9 +177,9 @@
           <div class="meimge3">
             <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture30.PNG" width="80%";height="70%";>
           </div>
-          <div class="rd">
-            <div class="a-pos2">
-              <a href="#" style="text-decoration:none"><p>Read More<i class='fas fa-book-open'></i>
+          <div class="rd3">
+            <div class="a-pos3">
+              <a href="#" style="text-decoration:none"><p>Read More<div class="openbook3">&#128214;</div>
             </p></a></div>
           </div>
         </div>
